# arty-mc

./: .codacy.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  arty-mc.py  auth.py  config.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
arty_mc/: __init__.py  __main__.py  arty_mc.py  auth.py  config.py
arty_mc/core/: api_client.py  artifactory_fs.py  fs_utils.py  local_fs.py  transfers.py
arty_mc/ui/: commander_screen.py  confirm_dialog.py  delete_panel.py  error_dialog.py  file_table.py  filter_bar.py  path_line.py  transfer_panel.py
core/: api_client.py  artifactory_fs.py  local_fs.py  transfers.py
tests/: conftest.py  test__main__.py  test_api_client.py  test_artifactory_fs.py  test_arty_mc.py  test_auth.py  test_commander_screen.py  test_config.py  test_confirm_dialog.py  test_delete_panel.py  test_error_dialog.py  test_file_table.py  test_filter_bar.py  test_local_fs.py  test_path_line.py  test_transfer_panel.py  test_transfers.py  test_ui_coverage.py
ui/: commander_screen.py  confirm_dialog.py  delete_panel.py  file_table.py  filter_bar.py  path_line.py  transfer_panel.py
