[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:.*pathlib.PurePath.*:DeprecationWarning:artifactory",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "S"]
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is correct usage in pytest tests
